--- a/public/app_data.json
+++ b/public/app_data.json
@@ -3,7 +3,7 @@
     "id": "app001",
     "name": "Udemy",
     "developer": "Udemy Inc.",
-    "thumbnail": "https://i.ibb.co.com/CKC65rx1/udemy-th.png",
+    "thumbnail": "https://i.ibb.co.com/Nn9rq7PW/udemy-th.png",
     "banner": "https://i.ibb.co.com/zVDwhcHJ/udemy-banner.png",
     "downloads": 1000000,
     "category": "Education",
