--- a/public/app_data.json
+++ b/public/app_data.json
@@ -141,8 +141,8 @@
     "id": "app007",
     "name": "Khan Academy",
     "developer": "Khan Academy Inc.",
-    "thumbnail": "https://i.ibb.co.com/qYYyR3Rh/Headspace-th.png",
-    "banner": "https://i.ibb.co.com/nMwkTXws/Headspace-banner.png",
+    "thumbnail": "https://i.ibb.co.com/hxx3NCqY/khan.webp",
+    "banner": "https://i.ibb.co.com/vvBrhN6f/khan-academy-banner.jpg",
     "downloads": 1600000,
     "category": "Education",
     "rating": 4.1,
@@ -164,8 +164,8 @@
     "id": "app008",
     "name": "Headspace",
     "developer": "Headspace Inc.",
-    "thumbnail": "https://i.ibb.co.com/1fPbctDf/google-keep-th.png",
-    "banner": "https://i.ibb.co.com/mFFJNrHs/google-keep-banner.png",
+    "thumbnail": "https://i.ibb.co.com/qYYyR3Rh/Headspace-th.png",
+    "banner": "https://i.ibb.co.com/nMwkTXws/Headspace-banner.png",
     "downloads": 1700000,
     "category": "Health",
     "rating": 4.2,
@@ -187,8 +187,8 @@
     "id": "app009",
     "name": "Google Keep",
     "developer": "Google Keep Inc.",
-    "thumbnail": "https://i.ibb.co.com/DDFkvzJY/Flo-th.png",
-    "banner": "https://i.ibb.co.com/3mLCP68y/Flo-banner.png",
+    "thumbnail": "https://i.ibb.co.com/1fPbctDf/google-keep-th.png",
+    "banner": "https://i.ibb.co.com/mFFJNrHs/google-keep-banner.png",
     "downloads": 1800000,
     "category": "Productivity",
     "rating": 4.3,
@@ -210,8 +210,8 @@
     "id": "app010",
     "name": "Flo",
     "developer": "Flo Inc.",
-    "thumbnail": "https://i.ibb.co.com/CK0MLNvq/FitOn-th.jpg",
-    "banner": "https://i.ibb.co.com/9xQqzMc/Fit-On-banner.jpg",
+    "thumbnail": "https://i.ibb.co.com/DDFkvzJY/Flo-th.png",
+    "banner": "https://i.ibb.co.com/3mLCP68y/Flo-banner.png",
     "downloads": 1900000,
     "category": "Health",
     "rating": 4.4,
@@ -233,8 +233,8 @@
     "id": "app011",
     "name": "FitOn",
     "developer": "FitOn Inc.",
-    "thumbnail": "https://i.ibb.co.com/BV3j2K27/Evernote-th.png",
-    "banner": "https://i.ibb.co.com/fGtP20xp/Evernote-banner.png",
+    "thumbnail": "https://i.ibb.co.com/CK0MLNvq/FitOn-th.jpg",
+    "banner": "https://i.ibb.co.com/9xQqzMc/Fit-On-banner.jpg",
     "downloads": 2000000,
     "category": "Health",
     "rating": 4.0,
@@ -256,8 +256,8 @@
     "id": "app012",
     "name": "Evernote",
     "developer": "Evernote Inc.",
-    "thumbnail": "https://i.ibb.co.com/p6xPzN8J/duolingo-th.png",
-    "banner": "https://i.ibb.co.com/kggD87Bz/duolingo-banner.png",
+    "thumbnail": "https://i.ibb.co.com/BV3j2K27/Evernote-th.png",
+    "banner": "https://i.ibb.co.com/fGtP20xp/Evernote-banner.png",
     "downloads": 2100000,
     "category": "Productivity",
     "rating": 4.1,
@@ -279,8 +279,8 @@
     "id": "app013",
     "name": "Duolingo",
     "developer": "Duolingo Inc.",
-    "thumbnail": "https://i.ibb.co.com/LDhdjsYQ/coursera-th.png",
-    "banner": "https://i.ibb.co.com/M5V8FWNg/coursera-banner.jpg",
+    "thumbnail": "https://i.ibb.co.com/p6xPzN8J/duolingo-th.png",
+    "banner": "https://i.ibb.co.com/kggD87Bz/duolingo-banner.png",
     "downloads": 2200000,
     "category": "Education",
     "rating": 4.2,
@@ -302,8 +302,8 @@
     "id": "app014",
     "name": "Coursera",
     "developer": "Coursera Inc.",
-    "thumbnail": "https://i.ibb.co.com/HD4sqq4P/Click-Up-th.png",
-    "banner": "https://i.ibb.co.com/JWqNLDHP/Click-Up-banner.png",
+    "thumbnail": "https://i.ibb.co.com/LDhdjsYQ/coursera-th.png",
+    "banner": "https://i.ibb.co.com/M5V8FWNg/coursera-banner.jpg",
     "downloads": 2300000,
     "category": "Education",
     "rating": 4.3,
@@ -325,8 +325,8 @@
     "id": "app015",
     "name": "ClickUp",
     "developer": "ClickUp Inc.",
-    "thumbnail": "https://i.ibb.co.com/NdmG7vpt/Calm-th.jpg",
-    "banner": "https://i.ibb.co.com/CpGdb2MY/Calm-banner.jpg",
+    "thumbnail": "https://i.ibb.co.com/HD4sqq4P/Click-Up-th.png",
+    "banner": "https://i.ibb.co.com/JWqNLDHP/Click-Up-banner.png",
     "downloads": 2400000,
     "category": "Productivity",
     "rating": 4.4,
@@ -348,8 +348,8 @@
     "id": "app016",
     "name": "Calm",
     "developer": "Calm Inc.",
-    "thumbnail": "https://i.ibb.co.com/WXKmZrN/brilliant-th.jpg",
-    "banner": "https://i.ibb.co.com/NnCF8ghy/brilliant-banner.png",
+    "thumbnail": "https://i.ibb.co.com/NdmG7vpt/Calm-th.jpg",
+    "banner": "https://i.ibb.co.com/CpGdb2MY/Calm-banner.jpg",
     "downloads": 2500000,
     "category": "Health",
     "rating": 4.0,
@@ -371,8 +371,8 @@
     "id": "app017",
     "name": "Brilliant",
     "developer": "Brilliant Inc.",
-    "thumbnail": "https://i.ibb.co.com/Z6wH7q1b/app018-th.jpg",
-    "banner": "https://i.ibb.co.com/5W1k0sDZ/app018-banner.png",
+    "thumbnail": "https://i.ibb.co.com/WXKmZrN/brilliant-th.jpg",
+    "banner": "https://i.ibb.co.com/NnCF8ghy/brilliant-banner.png",
     "downloads": 2600000,
     "category": "Education",
     "rating": 4.1,
